--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="https://lyheang.com/img/heang.png">
     <link rel="apple-touch-icon" href="https://lyheang.com/img/heang.png">
     <link rel="icon" type="image/png" href="https://lyheang.com/img/heang.png">
-    <title>Lyheang</title>
+    <title>as mobile</title>
 	<link rel="stylesheet" href="https://lyheang.com/css/style.css">
 	<link rel="stylesheet" href="https://lyheang.com/css/style_1.css">
 	<link rel="stylesheet" href="https://lyheang.com/css/style_2.css">
