--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body, html{
 </section>
 
 <center><img src="https://www.lyheang.com/img/heang.png" style="width:100px;margin:10px;border-radius:20px;;margin-top:40px;" />
-<h1 data-noir-inline-color="" style="margin: 0px; font-size: 25px; color: rgb(0, 0, 0); --noir-inline-color: #e8e6e3;">Lyheang</h1>
+<h1 data-noir-inline-color="" style="margin: 0px; font-size: 25px; color: rgb(0, 0, 0); --noir-inline-color: #e8e6e3;">as mobile</h1>
 
 <center><img src="https://www.lyheang.com/img/icon/telegram_rocket.png" style="width:70px;margin:10px;border-radius:20px;;margin-top:40px;" />
 <h1 data-noir-inline-color="" style="margin: 0px; font-size: 13px; color: rgb(0, 0, 0); --noir-inline-color: #e8e6e3;">My Telegram</h1>
