--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body, html{
 	font-family:helvetica;
 	overflow-x:hidden;
 	height:100%;
-	background: rgb(255, 255, 255) url(https://www.lyheang.com/img/background.png) no-repeat;
+	background: rgb(255, 255, 255) url(https://i.ibb.co/0XLGMFf/Flag-of-Kurdistan-svg.png) no-repeat;
   background-size: 100%;
             width: 100%;
             height: 100%;
