--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://lyheang.com/img/heang.png">
     <link rel="apple-touch-icon" href="https://lyheang.com/img/heang.png">
-    <link rel="icon" type="image/png" href="https://lyheang.com/img/heang.png">
+    <link rel="icon" type="image/png" href="https://i.ibb.co/0XLGMFf/Flag-of-Kurdistan-svg.png">
     <title>as mobile</title>
 	<link rel="stylesheet" href="https://lyheang.com/css/style.css">
 	<link rel="stylesheet" href="https://lyheang.com/css/style_1.css">
@@ -23,7 +23,7 @@ body, html{
 	font-family:helvetica;
 	overflow-x:hidden;
 	height:100%;
-	background: rgb(255, 255, 255) url(https://i.ibb.co/0XLGMFf/Flag-of-Kurdistan-svg.png) no-repeat;
+	background: rgb(255, 255, 255) url(https://lyheang.com/img/heang.png) no-repeat;
   background-size: 100%;
             width: 100%;
             height: 100%;
