--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body, html{
  <div class="wrapper">
 	<a class="nav-link" href="#
 	rel="VkRJNFpsSmhkMGRSU0UxVk4wbHpObTlFU1M5eFVUMDlPanFwNGlGQXhRUjJKMVJ0WWdiS1hmeW4=" id="changeLang" role="button">
-	<img src="https://lyheang.com/img/cambodia.png" width="50" />
+	<img src="https://i.ibb.co/0XLGMFf/Flag-of-Kurdistan-svg.png" width="50" />
 	</a>
 </center>
 <section class="isipho__breadcrumb hm">
