--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@ body, html{
 <header id="headerMobile" class="container__header__mobile">
  <a href="">
  <div class="logo">
- <img class="image" style="margin:10px;border-radius:10px;;margin-top:40px;" src="https://ibb.co/w0Hm0LM"><img src="https://i.ibb.co/w0Hm0LM/photo.jpg" width="47" alt="">
+ <img class="image" style="margin:10px;border-radius:10px;;margin-top:40px;" src="https://ibb.co/w0Hm0LM"><img src="https://i.ibb.co/w0Hm0LM/photo.https://i.ibb.co/DKby2gg/IMG-1467.png" width="47" alt="">
  </div>
  </a>
  <div class="wrapper">
 	<a class="nav-link" href="#
 	rel="VkRJNFpsSmhkMGRSU0UxVk4wbHpObTlFU1M5eFVUMDlPanFwNGlGQXhRUjJKMVJ0WWdiS1hmeW4=" id="changeLang" role="button">
-	<img src="https://i.ibb.co/0XLGMFf/Flag-of-Kurdistan-svg.png" width="50" />
+	<img src="https://i.ibb.co/0XLGMFf/Flag-of-Kurdistan-svg.https://i.ibb.co/DKby2gg/IMG-1467.png" width="50" />
 	</a>
 </center>
 <section class="isipho__breadcrumb hm">
