--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="apple-touch-icon" href="https://lyheang.com/img/heang.png">
     <link rel="icon" type="image/png" href="https://i.ibb.co/0XLGMFf/Flag-of-Kurdistan-svg.png">
     <title>as mobile</title>
-	<link rel="stylesheet" href="https://lyheang.com/css/style.css">
-	<link rel="stylesheet" href="https://lyheang.com/css/style_1.css">
-	<link rel="stylesheet" href="https://lyheang.com/css/style_2.css">
-	<link rel="stylesheet" href="https://lyheang.com/css/style_3.css">
-	<link rel="stylesheet" href="https://lyheang.com/css/style_4.css" />
+	<link rel="stylesheet" href="https://ashtemzere.github.io/ah//css/style.css">
+	<link rel="stylesheet" href="https://ashtemzere.github.io/ah//css/style_1.css">
+	<link rel="stylesheet" href="https://ashtemzere.github.io/ah//css/style_2.css">
+	<link rel="stylesheet" href="https://ashtemzere.github.io/ah//css/style_3.css">
+	<link rel="stylesheet" href="https://ashtemzere.github.io/ah//css/style_4.css" />
 
 <style>
 body, html{
@@ -61,10 +61,10 @@ body, html{
 	</a>
 </center>
 <section class="isipho__breadcrumb hm">
-<div class="wrapper"><a class="link active" href=" ">Home</a></div>
+<div class="wrapper"><a class="link active" href="https://ashtemzere.github.io/ah/">Home</a></div>
 </section>
 
-<center><img src="https://www.lyheang.com/img/heang.png" style="width:100px;margin:10px;border-radius:20px;;margin-top:40px;" />
+<center><img src="https://i.ibb.co/vjzf8YD/IMG-1993.png" style="width:100px;margin:10px;border-radius:20px;;margin-top:40px;" />
 <h1 data-noir-inline-color="" style="margin: 0px; font-size: 25px; color: rgb(0, 0, 0); --noir-inline-color: #e8e6e3;">as mobile</h1>
 
 <center><img src="https://www.lyheang.com/img/icon/telegram_rocket.png" style="width:70px;margin:10px;border-radius:20px;;margin-top:40px;" />
