--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="apple-touch-icon" href="https://lyheang.com/img/heang.png">
     <link rel="icon" type="image/png" href="https://i.ibb.co/0XLGMFf/Flag-of-Kurdistan-svg.png">
     <title>as mobile</title>
-	<link rel="stylesheet" href="https://ashtemzere.github.io/ah//css/style.css">
-	<link rel="stylesheet" href="https://ashtemzere.github.io/ah//css/style_1.css">
-	<link rel="stylesheet" href="https://ashtemzere.github.io/ah//css/style_2.css">
-	<link rel="stylesheet" href="https://ashtemzere.github.io/ah//css/style_3.css">
-	<link rel="stylesheet" href="https://ashtemzere.github.io/ah//css/style_4.css" />
+	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/style_1.css">
+	<link rel="stylesheet" href="/css/style_2.css">
+	<link rel="stylesheet" href="/css/style_3.css">
+	<link rel="stylesheet" href="/css/style_4.css" />
 
 <style>
 body, html{
