--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ body, html{
 
 
 
-<center><img src="https://www.lyheang.com/img/heang.png" style="width:70px;margin:10px;border-radius:20px;;margin-top:40px;" />
+<center><img src="https://www.lyheang.com/img/icon/telegram_rocket.png" style="width:70px;margin:10px;border-radius:20px;;margin-top:40px;" />
 <h1 data-noir-inline-color="" style="margin: 0px; font-size: 13px; color: rgb(0, 0, 0); --noir-inline-color: #e8e6e3;">HEANG IOS IPA </h1>
 
 <p data-noir-inline-color="" style="margin: 10px; font-size: 15px; color: rgb(0, 0, 0); --noir-inline-color: #e8e6e3;">Join For Free IPA &amp; News</p>
