--- a/index.html
+++ b/index.html
@@ -108,6 +108,6 @@ body, html{
 <h1 data-noir-inline-color="" style="margin: 0px; font-size: 13px; color: rgb(0, 0, 0); --noir-inline-color: #e8e6e3;">Free IOS IPA News </h1>
 
 <p data-noir-inline-color="" style="margin: 10px; font-size: 15px; color: rgb(0, 0, 0); --noir-inline-color: #e8e6e3;">Join My Telegram</p>
-<a href="https://t.me/heangiosipa" target="_blank" class="button button-fill button-round" style="display:inline-block; width:170px; padding:10px; border-radius:5px; background-color:#0080ff; margin:10px; color:white;text-decoration:none; font-weight:500; background: #0080ff; color: #ffffff; font-weight:bold;">Join Channel</a>
+<a href="https://t.me/+DJxuXeJKyPIwODRi" target="_blank" class="button button-fill button-round" style="display:inline-block; width:170px; padding:10px; border-radius:5px; background-color:#0080ff; margin:10px; color:white;text-decoration:none; font-weight:500; background: #0080ff; color: #ffffff; font-weight:bold;">Join Channel</a>
 </body>
 </html>
