--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body, html{
                         <img style="width:70px;margin:10px;border-radius:20px;;margin-top:40px;"src="https://cydiainfo.tk/img/esign.png">
                         <h1 style="margin:0px;font-size:13px;color:rgb(0, 0, 0);">Esign</h1>
                         <p style="margin:10px;font-size:10px;color:rgb(41, 41, 41);">Certificate</p>
-                        <a class="button" style="margin:10px;font-size:10px;color:rgb(255, 255, 255);" href="itms-services:///?action=download-manifest&url=https://lyheang.com/plist/esign.plist">Buy Now</a>
+                        <a class="button" style="margin:10px;font-size:10px;color:rgb(255, 255, 255);" href="itms-services:///?action=download-manifest&url=https://lyheang.com/plist/esign.plist">INSTALL</a>
                     </center>
 
 
