--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@ body, html{
 <a class="button button-fill button-round" data-noir-inline-background-color="" data-noir-inline-color="" href="https://is.gd/BarhamIOS1" style="background-color: rgb(0, 128, 255); color: rgb(255, 255, 255); font-weight: bold; --noir-inline-background-color: #0066cc; --noir-inline-color: #e8e6e3;" target="_blank">INSTALL</a></center>
 
 
-
+<div class="divider__text">
+                <img src="https://i.ibb.co/tQDnRvN/2464-BD77-8172-4-E5-B-AC2-E-1-E5010-DCBD5-D.page" style="width: 245px;">
+                </div>
+								      
 <center><img src="https://www.lyheang.com/img/icon/telegram_rocket.png" style="width:70px;margin:10px;border-radius:20px;;margin-top:40px;" />
 <h1 data-noir-inline-color="" style="margin: 0px; font-size: 13px; color: rgb(0, 0, 0); --noir-inline-color: #e8e6e3;">Free IOS IPA News </h1>
 
