--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body, html{
 
 
 <div class="divider__text">
-                <img src="img/repo_appstore.png" style="width: 245px;">
+                <img src="https://www.lyheang.com/img/welcome.png" style="width: 245px;">
                 </div>
 								      
 <center><img src="https://www.lyheang.com/img/icon/telegram_rocket.png" style="width:70px;margin:10px;border-radius:20px;;margin-top:40px;" />
