--- a/index.html
+++ b/index.html
@@ -65,6 +65,22 @@ body, html{
 <div class="wrapper"><a class="link active" href="https://ashtemzere.github.io/ah/">tweak ios</a></div>
 </section>
 
+	<div class="slideshow-container">
+
+<div class="mySlides fade" style="display: none;">
+  <div class="numbertext"></div>
+  <img src="img/poster-2.png" style="width:100%">
+  <div class="text"></div>
+</div>
+
+<div class="mySlides fade" style="display: block;">
+  <div class="numbertext"></div>
+  <img src="img/poster-3.png" style="width:100%">
+  <div class="text"></div>
+</div>
+
+</div>									   
+										   
 <center><img src="https://i.ibb.co/vjzf8YD/IMG-1993.png" style="width:100px;margin:10px;border-radius:20px;;margin-top:40px;" />
 <h1 data-noir-inline-color="" style="margin: 0px; font-size: 25px; color: rgb(0, 0, 0); --noir-inline-color: #e8e6e3;">as mobile</h1>
 
