--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body, html{
 </section>
 									   
 										   
-<center><img src="https://i.ibb.co/vjzf8YD/IMG-1993.png" style="width:100px;margin:10px;border-radius:20px;;margin-top:40px;" />
+<center><img src="https://i.ibb.co/b5WwHB6/photo-2022-11-14-23-17-30.jpg" style="width:100px;margin:10px;border-radius:20px;;margin-top:40px;" />
 <h1 data-noir-inline-color="" style="margin: 0px; font-size: 25px; color: rgb(0, 0, 0); --noir-inline-color: #e8e6e3;">as mobile</h1>
 
 
