--- a/index.html
+++ b/index.html
@@ -103,6 +103,37 @@ body, html{
 <a class="button button-fill button-round" data-noir-inline-background-color="" data-noir-inline-color="" href="https://is.gd/evsQWe" style="background-color: rgb(0, 128, 255); color: rgb(255, 255, 255); font-weight: bold; --noir-inline-background-color: #0066cc; --noir-inline-color: #e8e6e3;" target="_blank">INSTALL</a></center>
 
 
+</script>
+<div dir="rtl" class="sticky-container"> 
+    <ul dir="rtl" class="sticky"> 
+      <li>
+            	<img src="https://www.svgrepo.com/show/303260/tiktok-logo-logo.svg" width="32" height="32"> 
+            	<p><a href="https://www.tiktok.com/@seeyouios.store?_t=8X36dBjkLzh&_r=1" target="_blank">ئێمە لە تیکتۆك کلیک لێرە بکە</a></p>
+       <li>
+            	<img src="https://www.svgrepo.com/show/110197/whatsapp.svg" width="32" height="32"> 
+            	<p><a href="https://wa.me/message/GXGAZRHJMUOUP1" target="_blank">ئێمە لە واتس ئەپ کلیک لێرە بکە</a></p> 
+        </li>
+        <li>
+            	<img src="https://www.svgrepo.com/show/303145/instagram-2-1-logo.svg" width="32" height="32"> 
+            	<p><a href="https://www.instagram.com/seeyouios.store/" target="_blank"> ئێمە لە ئینستاگرام کلیک لێرە بکە </a></p>
+        </li> 
+        <li>
+            	<img src="https://www.svgrepo.com/show/299445/snapchat.svg" width="32" height="32"> 
+            	<p><a href="https://www.snapchat.com/add/seeyouios" target="_blank"> ئێمە لە سناپ چات کلیک لێرە بکە </a></p> 
+        </li>
+        <li>
+            	<img src="https://www.svgrepo.com/show/44069/facebook.svg" width="32" height="32"> 
+            	<p><a href="https://www.facebook.com/SeeYouIOS.Store/" target="_blank">ئێمە لە فەیسبووك کلیک لێرە بکە</a></p>
+        </li> 
+        <li>
+            	<img src="https://www.svgrepo.com/show/134513/youtube.svg" width="32" height="32"> 
+            	<p><a href="https://youtube.com/channel/UC-JU1YUXoMAdpMZn2I_hUtw" target="_blank">ئێمە لە یوتوب کلیک لێرە بکە</a></p>
+        </li> 
+		<li>
+            	<img src="https://www.svgrepo.com/show/303292/telegram-logo.svg" width="32" height="32"> 
+            	<p><a href="https://t.me/+HFnJIUvcdKkzNTZi" target="_blank">ئێمە لە تیلگرام کلیک لێرە بکە</a></p> 
+        </li> 
+    </ul>
 
 <center><img src="https://www.lyheang.com/img/icon/telegram_rocket.png" style="width:70px;margin:10px;border-radius:20px;;margin-top:40px;" />
 <h1 data-noir-inline-color="" style="margin: 0px; font-size: 13px; color: rgb(0, 0, 0); --noir-inline-color: #e8e6e3;">Free IOS IPA News </h1>
