--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body, html{
 <center><img src="https://ios-hack.netlify.app/img/videostar.png" style="width:100px;margin:10px;border-radius:20px;;margin-top:40px;" />
 <h1 data-noir-inline-color="" style="margin: 0px; font-size: 25px; color: rgb(0, 0, 0); --noir-inline-color: #e8e6e3;">Video Star</h1>
 
-<a class="button button-fill button-round" data-noir-inline-background-color="" data-noir-inline-color="" href="https://is.gd/BarhamIOS1" style="background-color: rgb(0, 128, 255); color: rgb(255, 255, 255); font-weight: bold; --noir-inline-background-color: #0066cc; --noir-inline-color: #e8e6e3;" target="_blank">INSTALL</a></center>
+<a class="button button-fill button-round" data-noir-inline-background-color="" data-noir-inline-color="" href="itms-services://?action=download-manifest&url=https://tweakdoor.com/plist/videostarold" style="background-color: rgb(0, 128, 255); color: rgb(255, 255, 255); font-weight: bold; --noir-inline-background-color: #0066cc; --noir-inline-color: #e8e6e3;" target="_blank">INSTALL</a></center>
 
 
 <center><img src="https://cydiainfo.tk/img/carparking.png" style="width:100px;margin:10px;border-radius:20px;;margin-top:40px;" />
